@@ -5,6 +5,7 @@
 * less cryptic message about bad number of rows in `modify`/`modify_if`
 * .N now is preferable to .n inside `modify` and etc.
 * Functions for default dataset now invisibly return modified default dataset
+* Fix logical arguments in boolean operations for criteria functions
 
 0.5.5 (19.10.2016)
 ================
